Bug 19348: Title column in item search is too narrow
This patch adds IDs to the item search results table header so that
columns can be targeted by CSS or JS. The CSS for the item search page
has been modified to give the title column a minimum width.

To test, apply the patch and clear your browser cache if necessary.
Perform an item search and confirm that the title column stays at a
reasonable width.

--- a/koha-tmpl/intranet-tmpl/prog/css/itemsearchform.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/itemsearchform.css
@@ -42,3 +42,7 @@ th select {
   width: 100%;
   font-weight: normal;
 }
+
+th#items_title {
+  min-width: 12em;
+}
